# cafe_demo

./: README.md
201305_cafe_concert/drink_delivery/cafe_concert_clients/launch/: waiter_client_test.launch  waiter_realclient.launch
201305_cafe_concert/opp_demo/services/make_a_map/: make_a_map.service
201305_cafe_concert/task_master/delivery_robot/scripts/: new_waiter_soft.py
201305_cafe_concert/task_master/task_manager/scripts/: cafe_manager.py
201312_cafe_concert_webinterfaces/cafe_viewer/www/: index.html
201312_cafe_concert_webinterfaces/kitchen/www/: index.html
201312_cafe_concert_webinterfaces/webapp/cafe_Dorothy/: dorothy_web_menu.html  dorothy_web_menu_edge.js  dorothy_web_menu_edgeActions.js  dorothy_web_menu_edgePreload.js
annotations_store/: CMakeLists.txt  package.xml
annotations_store/src/: annotations_manager.cpp
annotations_store/srv/: SaveMarkers.srv
ar_track_alvar/: CMakeLists.txt  package.xml
ar_track_alvar/nodes/: FindMarkerBundles.cpp  IndividualMarkers.cpp  IndividualMarkersNoKinect.cpp
executive_smach/smach_ros/src/smach_ros/: introspection.py
kobuki-x/waiterbot/: CMakeLists.txt  package.xml
kobuki-x/waiterbot/include/waiterbot/: ar_markers.hpp
kobuki-x/waiterbot/launch/: waiterbot_demo.launch  waiterbot_demo.launch.backup
kobuki-x/waiterbot/launch/includes/: _amcl.launch  _move_base.launch
kobuki-x/waiterbot/param/move_base_backup/: costmap_common_params.yaml
kobuki-x/waiterbot/src/: .ar_markers.cpp.swp  ar_markers.cpp  waiter_tasks.cpp
kobuki_softnode/kobuki_softnode/: CMakeLists.txt  package.xml
kobuki_softnode/kobuki_softnode/src/nodelet/: kobuki_nodelet.cpp
rocon_app_platform/rocon_app_manager/param/: app_manager_defaults.yaml
rocon_app_platform/rocon_app_manager/src/rocon_app_manager/: rapp.py
rocon_concert/concert_conductor/launch/: conductor.launch
rocon_concert/concert_conductor/src/concert_conductor/: conductor.py
rocon_concert/concert_orchestra/src/concert_orchestra/: implementation.py
rocon_database/semantic_region_handler/: CMakeLists.txt  package.xml
rocon_database/semantic_region_handler/launch/: database_handler.launch
rocon_database/semantic_region_handler/msg/: Region.msg
rocon_database/semantic_region_handler/scripts/: alvar_ar_handler.py  alvar_ar_loader.py  alvar_ar_poller.py  alvar_ar_publisher_from_file.py  table_loader.py  table_poller.py
rocon_multimaster/rocon_gateway/src/rocon_gateway/: gateway_node.py
rocon_webnotator/www/: ar_handler.html  table_handler.html
spatial_world_model/world_msgs/: CMakeLists.txt
spatial_world_model/worldlib/: CMakeLists.txt  package.xml  setup.py
turtlebot/linux_hardware/: CMakeLists.txt  package.xml  setup.py
turtlebot/turtlebot_app_manager/: CMakeLists.txt  package.xml  setup.py
turtlebot/turtlebot_app_manager/scripts/: app_manager
turtlebot/turtlebot_app_manager/src/turtlebot_app_manager/: app_list.py  exchange.py  turtlebot_app_manager.py
turtlebot/turtlebot_app_manager_msgs/: CMakeLists.txt  package.xml
turtlebot/turtlebot_bringup/launch/: minimal.launch
turtlebot/turtlebot_bringup/launch/includes/: _app_manager.launch  _mobile_base.launch
turtlebot/turtlebot_core_apps/rapps/: turtlebot_core_apps.rapps
turtlebot/turtlebot_core_apps/rapps/android_make_a_map/: android_make_a_map.rapp
turtlebot/turtlebot_core_apps/rapps/android_map_manager/: android_map_manager.rapp
turtlebot/turtlebot_core_apps/rapps/android_map_nav/: android_map_nav.rapp
turtlebot/turtlebot_core_apps/rapps/android_teleop/: android_teleop.rapp
turtlebot/turtlebot_core_apps/rapps/auto_docking/: auto_docking.rapp
turtlebot/turtlebot_core_apps/rapps/follower/: follower.rapp
turtlebot/turtlebot_core_apps/rapps/panorama/: panorama.rapp
turtlebot/turtlebot_description/cmake/: turtlebot_descriptionConfig.cmake
turtlebot/turtlebot_description/robots/: kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_kinect2.urdf.xacro
turtlebot/turtlebot_description/urdf/: turtlebot_library.urdf.xacro  turtlebot_properties.urdf.xacro
(+25 files in other folders)
