<?xml version="1.0"?>
<package>
  <name>turtlebot_app_manager_msgs</name>
  <version>0.0.1</version>
  <description>The turtlebot_app_manager package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
